--- a/src/MediaBundle/Resources/views/album/show.html.twig
+++ b/src/MediaBundle/Resources/views/album/show.html.twig
@@ -28,6 +28,27 @@
         </tbody>
     </table>
 
+    <h3>Commentaires</h3>
+    {% for commentaire in commentaires if album.id == commentaire.albumid.id %}
+    <div class="thumbnail">
+
+        <p>Utilisateur : {{ commentaire.utilisateur }}</p>
+        <p>Support : {{ commentaire.commentaire }}</p>
+    </div>
+
+    {% endfor %}
+
+    <h3>Ajouter un commentaire</h3>
+
+    {{ form_start(newCom) }}
+        {{ form_errors(newCom) }}
+        {{ form_widget(newCom) }}
+        <br>
+        <input type="submit" value="Publier"  class="btn btn-default"/>
+    {{ form_end(newCom) }}
+<br><br>
+
+
     <a href="{{ path('album_index') }}" class="btn btn-default">Retour à la liste</a>
     <a href="{{ path('album_edit', { 'id': album.id }) }}" class="btn btn-default">Modifier</a>
     <br><br>
